# Deterministic-Page-Number-Predictor

./: .gitignore  README.md  pyproject.toml
src/page_predictor/: __init__.py  compiler.py  config.py  counter.py  errors.py  optimizer.py  pdf_reader.py
tests/: conftest.py  test_compiler.py  test_counter.py  test_pdf_reader.py
tests/fixtures/: sample_resume.tex
