[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "page-predictor"
version = "0.1.0"
description = "Deterministic page counter for LaTeX-compiled PDFs"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/page_predictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
